--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">
+                   <a class="nav-link" href="index.html">
                         <i class="fas fa-home"></i> Home
                     </a>
                 </li>
@@ -44,7 +44,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">
+                   <a class="nav-link active" aria-current="page" href="#">
                         <i class="fas fa-envelope"></i> Contact Us
                     </a>
                 </li>
