--- a/hire-me.html
+++ b/hire-me.html
@@ -29,12 +29,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">
+                    <a class="nav-link" href="index.html.html">
                         <i class="fas fa-home"></i> Home
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="hire-me.html">
+                     <a class="nav-link active" aria-current="page" href="#">
                         <i class="fas fa-briefcase"></i> Workspace
                     </a>
                 </li>
