--- a/contact.html
+++ b/contact.html
@@ -15,17 +15,12 @@
 <body>
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <!-- Logo -->
         <a class="navbar-brand" href="#">
             <img class="nav-logo" src="logo.png" alt="Logo">
         </a>
-        
-        <!-- Toggle button for mobile -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        
-        <!-- Navigation Links -->
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
@@ -58,7 +53,7 @@
       <div class="contact-header">
         <h1 class="articles-header">Contact Us!</h1>
       </div>
-      <form action="contact-form-handler.php" method="POST" class="needs-validation">
+      <form id="contactForm" class="needs-validation">
           <div class="row">
                 <div class="form-group">
                     <label for="firstName">Name</label>
@@ -81,22 +76,23 @@
             </div>
             <div class="form-group">
                 <label for="message">Your Message</label>
-                <textarea type="text" name="message" id="message" class="form-control req" required minlength="10"></textarea>
+                <textarea name="message" id="message" class="form-control req" required minlength="10"></textarea>
             </div>
           </div>
           <button type="submit" class="button-main contact-button">Submit</button>
       </form>
+      <p id="responseMessage" style="display: none; color: green; margin-top: 1rem;"></p>
+    </div>
+  </main>
 
 <footer class="custom-footer">
     <div class="container text-center">
         <h5 class="footer-header">Brain to Body</h5>
-
         <div class="footer-links">
             <a href="collaboration.html">Workspace</a>
             <a href="about.html">About Us</a>
             <a href="contact.html">Contact</a>
         </div>
-
         <div class="footer-icons">
             <a href="https://www.instagram.com/braintobody_?igsh=bjJsdng2am1tZWll" target="_blank" title="Follow us on Instagram">
                 <i class="ion-social-instagram-outline social-icon"></i>
@@ -114,16 +110,46 @@
                 <i class="ion-email social-icon"></i>
             </a>
         </div>
-
-       <p class="footer-copyright">
-    <a href="https://akashbhandari.netlify.app" target="_blank" style="text-decoration: none; color: inherit;">
-        Made by Aakash Bhandari © 2024
-    </a>
-</p>
+        <p class="footer-copyright">
+            <a href="https://akashbhandari.netlify.app" target="_blank" style="text-decoration: none; color: inherit;">
+                Made by Aakash Bhandari © 2024
+            </a>
+        </p>
     </div>
 </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXlR0RQGpG8SetfNbJ1Fd3L1oiwVfuZIvfLXJyP0n8A7PPVFxNbp1WjS3GKh" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pzjw8f+ua7Kw1TIqFv8sjGBbvDkCkJg9Am1j5RrgrVVNjl1QlmKT8jrJRMzDvrj3" crossorigin="anonymous"></script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script>
+      (function() {
+        emailjs.init("4nyqkhPbH9KJ95fYS"); // Replace with your EmailJS User ID
+      })();
+
+      const form = document.getElementById('contactForm');
+      const responseMessage = document.getElementById('responseMessage');
+
+      form.addEventListener('submit', function(event) {
+        event.preventDefault();
+
+        const formData = {
+          name: form.firstName.value,
+          phone: form.phone.value,
+          email: form.email.value,
+          message: form.message.value,
+        };
+
+        emailjs.send("FormSubmit Notification", "template_5tgeu2u", formData)
+          .then(function() {
+            responseMessage.style.display = "block";
+            responseMessage.textContent = "Your message was sent successfully!";
+            form.reset();
+          })
+          .catch(function(error) {
+            responseMessage.style.display = "block";
+            responseMessage.style.color = "red";
+            responseMessage.textContent = "Failed to send your message. Please try again later.";
+            console.error("EmailJS Error:", error);
+          });
+      });
+    </script>
 </body>
 </html>
