--- a/about.html
+++ b/about.html
@@ -84,10 +84,11 @@
   </main>
 <footer class="custom-footer">
     <div class="container text-center">
-        <!-- Header -->
-        <h5 class="footer-header">Brain to Body</h5>
-
-        <!-- Navigation Links -->
+        <h5 class="footer-header">
+            <a href="index.html" style="text-decoration: none; color: inherit;">
+                Brain to Body
+            </a>
+        </h5>
         <div class="footer-links">
             <a href="collaboration.html">Workspace</a>
             <a href="about.html">About Us</a>
