--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <!-- Navigation Links -->
         <div class="footer-links">
-            <a href="collaboration.html">Workspace</a>
+            <a href="hire-me.html">Workspace</a>
             <a href="about.html">About Us</a>
             <a href="contact.html">Contact</a>
         </div>
