--- a/index.html
+++ b/index.html
@@ -66,61 +66,74 @@
   </div>
 
     
- <div class="about-me-right">
+<div class="about-me-right">
   <div class="about-me">
     <h3 class="section-title">✨ Specialties ✨</h3>
-    <ul class="specialties-list">
-      <li>
+    <div class="specialties-grid">
+      <div class="specialty-card">
         <span class="icon">🧠</span>
-        <strong>Mindset Coaching</strong> – Focus on fostering positive thinking and resilience.
-      </li>
-      <li>
+        <h4>Mindset Coaching</h4>
+        <p>Focus on fostering positive thinking and resilience.</p>
+      </div>
+      <div class="specialty-card">
         <span class="icon">🔄</span>
-        <strong>Brain Reprogramming</strong> – Techniques like visualization, affirmations, and self-hypnosis.
-      </li>
-      <li>
+        <h4>Brain Reprogramming</h4>
+        <p>Techniques like visualization, affirmations, and self-hypnosis.</p>
+      </div>
+      <div class="specialty-card">
         <span class="icon">🧘</span>
-        <strong>Stress Management</strong> – Strategies like mindfulness, meditation, and relaxation techniques.
-      </li>
-      <li>
+        <h4>Stress Management</h4>
+        <p>Strategies like mindfulness, meditation, and relaxation techniques.</p>
+      </div>
+      <div class="specialty-card">
         <span class="icon">💖</span>
-        <strong>Emotional Healing</strong> – Use of techniques like NLP, EFT, and therapy for emotional well-being.
-      </li>
-      <li>
+        <h4>Emotional Healing</h4>
+        <p>Use of techniques like NLP, EFT, and therapy for emotional well-being.</p>
+      </div>
+      <div class="specialty-card">
         <span class="icon">🌙</span>
-        <strong>Sleep Health</strong> – Guidance on improving sleep quality and managing related disorders.
-      </li>
-      <li>
+        <h4>Sleep Health</h4>
+        <p>Guidance on improving sleep quality and managing related disorders.</p>
+      </div>
+      <div class="specialty-card">
         <span class="icon">🥗</span>
-        <strong>Personalized Nutrition</strong> – Tailored diet plans for specific health goals or conditions.
-      </li>
-      <li>
+        <h4>Personalized Nutrition</h4>
+        <p>Tailored diet plans for specific health goals or conditions.</p>
+      </div>
+      <div class="specialty-card">
         <span class="icon">⚖️</span>
-        <strong>Weight Management</strong> – Holistic approaches for sustainable weight loss or maintenance.
-      </li>
-      <li>
+        <h4>Weight Management</h4>
+        <p>Holistic approaches for sustainable weight loss or maintenance.</p>
+      </div>
+      <div class="specialty-card">
         <span class="icon">🏋️</span>
-        <strong>Fitness and Movement</strong> – Focus on functional fitness, yoga, or personalized exercise plans.
-      </li>
-      <li>
+        <h4>Fitness and Movement</h4>
+        <p>Focus on functional fitness, yoga, or personalized exercise plans.</p>
+      </div>
+      <div class="specialty-card">
         <span class="icon">🩺</span>
-        <strong>Disease Prevention</strong> – Addressing chronic conditions like diabetes, PCOS, or hypertension.
-      </li>
-      <li>
+        <h4>Disease Prevention</h4>
+        <p>Addressing chronic conditions like diabetes, PCOS, or hypertension.</p>
+      </div>
+      <div class="specialty-card">
         <span class="icon">🌱</span>
-        <strong>Sustainable Lifestyle Changes</strong> – Practical strategies for integrating wellness into daily life.
-      </li>
-      <li>
+        <h4>Sustainable Lifestyle Changes</h4>
+        <p>Practical strategies for integrating wellness into daily life.</p>
+      </div>
+      <div class="specialty-card">
         <span class="icon">💡</span>
-        <strong>Behavioral Transformation</strong> – Techniques for rewiring habits and overcoming mental blocks.
-      </li>
-      <li>
+        <h4>Behavioral Transformation</h4>
+        <p>Techniques for rewiring habits and overcoming mental blocks.</p>
+      </div>
+      <div class="specialty-card">
         <span class="icon">🛁</span>
-        <strong>Detox and Cleansing</strong> – Evidence-based approaches to refresh and rejuvenate the body.
-      </li>
-    </ul>
+        <h4>Detox and Cleansing</h4>
+        <p>Evidence-based approaches to refresh and rejuvenate the body.</p>
+      </div>
+    </div>
   </div>
 </div>
+
 
         <!-- Instagram Post Embed -->
         <div class="instagram-post">
