--- a/index.html
+++ b/index.html
@@ -70,62 +70,62 @@
   <div class="about-me">
     <h3 class="section-title">✨ Specialties ✨</h3>
     <div class="specialties-grid">
-      <div class="specialty-card">
+      <div class="specialty-card tilted">
         <span class="icon">🧠</span>
         <h4>Mindset Coaching</h4>
         <p>Focus on fostering positive thinking and resilience.</p>
       </div>
-      <div class="specialty-card">
+      <div class="specialty-card rounded">
         <span class="icon">🔄</span>
         <h4>Brain Reprogramming</h4>
         <p>Techniques like visualization, affirmations, and self-hypnosis.</p>
       </div>
-      <div class="specialty-card">
+      <div class="specialty-card tilted">
         <span class="icon">🧘</span>
         <h4>Stress Management</h4>
         <p>Strategies like mindfulness, meditation, and relaxation techniques.</p>
       </div>
-      <div class="specialty-card">
+      <div class="specialty-card rounded">
         <span class="icon">💖</span>
         <h4>Emotional Healing</h4>
         <p>Use of techniques like NLP, EFT, and therapy for emotional well-being.</p>
       </div>
-      <div class="specialty-card">
+      <div class="specialty-card tilted">
         <span class="icon">🌙</span>
         <h4>Sleep Health</h4>
         <p>Guidance on improving sleep quality and managing related disorders.</p>
       </div>
-      <div class="specialty-card">
+      <div class="specialty-card rounded">
         <span class="icon">🥗</span>
         <h4>Personalized Nutrition</h4>
         <p>Tailored diet plans for specific health goals or conditions.</p>
       </div>
-      <div class="specialty-card">
+      <div class="specialty-card tilted">
         <span class="icon">⚖️</span>
         <h4>Weight Management</h4>
         <p>Holistic approaches for sustainable weight loss or maintenance.</p>
       </div>
-      <div class="specialty-card">
+      <div class="specialty-card rounded">
         <span class="icon">🏋️</span>
         <h4>Fitness and Movement</h4>
         <p>Focus on functional fitness, yoga, or personalized exercise plans.</p>
       </div>
-      <div class="specialty-card">
+      <div class="specialty-card tilted">
         <span class="icon">🩺</span>
         <h4>Disease Prevention</h4>
         <p>Addressing chronic conditions like diabetes, PCOS, or hypertension.</p>
       </div>
-      <div class="specialty-card">
+      <div class="specialty-card rounded">
         <span class="icon">🌱</span>
         <h4>Sustainable Lifestyle Changes</h4>
         <p>Practical strategies for integrating wellness into daily life.</p>
       </div>
-      <div class="specialty-card">
+      <div class="specialty-card tilted">
         <span class="icon">💡</span>
         <h4>Behavioral Transformation</h4>
         <p>Techniques for rewiring habits and overcoming mental blocks.</p>
       </div>
-      <div class="specialty-card">
+      <div class="specialty-card rounded">
         <span class="icon">🛁</span>
         <h4>Detox and Cleansing</h4>
         <p>Evidence-based approaches to refresh and rejuvenate the body.</p>
@@ -133,6 +133,8 @@
     </div>
   </div>
 </div>
+
+
 
 
         <!-- Instagram Post Embed -->
