--- a/about.html
+++ b/about.html
@@ -23,8 +23,9 @@
         
         <!-- Toggle button for mobile -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <span class="navbar-toggler-icon"></span>
+</button>
+
         
         <!-- Navigation Links -->
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -124,6 +125,8 @@
 </footer>
 
     <!-- Bootstrap JS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXlR0RQGpG8SetfNbJ1Fd3L1oiwVfuZIvfLXJyP0n8A7PPVFxNbp1WjS3GKh" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pzjw8f+ua7Kw1TIqFv8sjGBbvDkCkJg9Am1j5RrgrVVNjl1QlmKT8jrJRMzDvrj3" crossorigin="anonymous"></script>
 </body>
