--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
 <div class="simple-widget">
     <h3 class="widget-title">MAKING IT AS SIMPLE AS IT GETS</h3>
     <ul class="widget-list">
-        <li>&#10004; No medicines prescribed.</li>
-        <li>&#10004; No foreign foods or packaged foods or supplements.</li>
-        <li>&#10004; No hardcore exercise required as part of the diet (although any physical activity can be incorporated if patient prefers it.</li>
-        <li>&#10004; No fixation with kilos lost, we are aiming for good health and energetic feeling, numbers follow automatically.</li>
-        <li>&#10004; No expensive foreign superfoods, only traditional foods that people are used to.</li>
+        <li>No medicines prescribed.</li>
+        <li>No foreign foods or packaged foods or supplements.</li>
+        <li>No hardcore exercise required as part of the diet (although any physical activity can be incorporated if patient prefers it.</li>
+        <li>No fixation with kilos lost, we are aiming for good health and energetic feeling, numbers follow automatically.</li>
+        <li>No expensive foreign superfoods, only traditional foods that people are used to.</li>
     </ul>
 </div>
 
