--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
   </div>
 
 <div class="widget-container">
-    <!-- Right Widget (formerly Left) -->
-    <div class="widget right-widget">
-        <h3 class="widget-title">MAKING IT AS SIMPLE AS IT GETS</h3>
+    <!-- Left Widget -->
+    <div class="widget left-widget">
+        <h2 class="widget-title">MAKING IT AS SIMPLE AS IT GETS</h2>
         <ul class="widget-list">
             <li>No medicines prescribed</li>
             <li>No packaged foods or supplements</li>
@@ -78,28 +78,27 @@
             <li>No expensive foreign superfoods, only traditional foods that people are used to</li>
         </ul>
     </div>
-
     <!-- Center Widget -->
     <div class="widget center-widget">
-        <h3 class="widget-title">HELPING YOU IN EVERY STEP OF THE WAY</h3>
+        <h2 class="widget-title">HELPING YOU IN EVERY STEP OF THE WAY</h2>
         <ul class="widget-list">
             <li>During consultations, all the issues like what to do when away, what to eat out, eating during functions/weddings/parties etc are discussed and answered.</li>
             <li>Patients are also explained why their diet is planned in a particular way because when they understand, they follow better.</li>
             <li>Patients are always in touch via emails/calls in case of any queries or discomfort. So they always have support & guidance from Aruna & Soumya.</li>
         </ul>
     </div>
-
-    <!-- Left Widget (formerly Right) -->
-    <div class="widget left-widget">
-        <h3 class="widget-title">HOW IT WORKS?</h3>
+    <!-- Right Widget -->
+    <div class="widget right-widget">
+        <h2 class="widget-title">HOW IT WORKS?</h2>
         <ul class="widget-list">
             <li>When a patient visits, we first take up a detailed medical history as well as their physical parameters (height, weight, body composition analysis). Also their particular schedules, liking, limitations etc are noted.</li>
-            <li>Then, with the patient’s involvement, Aruna & Soumya designs a diet plan and a mental health program with minimal changes to their existing habits and eating patterns. Usually the initial plan is for 2 to 3 weeks.</li>
-            <li>In the next visit, all the parameters are measured again, and based on the results, further changes are made to the diet plan. Typically patients meets every week till they reach their goals.</li>
+            <li>Then, with the patient’s involvement, Aruna & Soumya design a diet plan and a mental health program with minimal changes to their existing habits and eating patterns. Usually the initial plan is for 2 to 3 weeks.</li>
+            <li>In the next visit, all the parameters are measured again, and based on the results, further changes are made to the diet plan. Typically patients meet every week till they reach their goals.</li>
             <li>On reaching their goals, patients are taught to maintain their health and plan their own diets. This involves explanations regarding how to plan their meals, what and how much to eat, what red flags to avoid etc. Patients are encouraged to keep checking their parameters at least once every 3-4 months.</li>
         </ul>
     </div>
 </div>
+
 
 
 <div class="appointment-widget">
