--- a/index.html
+++ b/index.html
@@ -69,13 +69,12 @@
 <div class="widget-container">
     <!-- Left Widget -->
     <div class="widget left-widget">
-        <h2 class="widget-title">MAKING IT AS SIMPLE AS IT GETS</h2>
+        <h2 class="widget-title">HOW IT WORKS?</h2>
         <ul class="widget-list">
-            <li>No medicines prescribed</li>
-            <li>No packaged foods or supplements</li>
-            <li>No hardcore exercise required as part of the diet (although any physical activity can be incorporated if patient prefers it)</li>
-            <li>No fixation with kilos lost, we are aiming for good health and energetic feeling, numbers follow automatically</li>
-            <li>No expensive foreign superfoods, only traditional foods that people are used to</li>
+            <li>When a patient visits, we first take up a detailed medical history as well as their physical parameters (height, weight, body composition analysis). Also their particular schedules, liking, limitations etc are noted.</li>
+            <li>Then, with the patient’s involvement, Aruna & Soumya design a diet plan and a mental health program with minimal changes to their existing habits and eating patterns. Usually the initial plan is for 2 to 3 weeks.</li>
+            <li>In the next visit, all the parameters are measured again, and based on the results, further changes are made to the diet plan. Typically patients meet every week till they reach their goals.</li>
+            <li>On reaching their goals, patients are taught to maintain their health and plan their own diets. This involves explanations regarding how to plan their meals, what and how much to eat, what red flags to avoid etc. Patients are encouraged to keep checking their parameters at least once every 3-4 months.</li>
         </ul>
     </div>
     <!-- Center Widget -->
@@ -89,13 +88,14 @@
     </div>
     <!-- Right Widget -->
     <div class="widget right-widget">
-        <h2 class="widget-title">HOW IT WORKS?</h2>
+        <h2 class="widget-title">MAKING IT AS SIMPLE AS IT GETS!</h2>
         <ul class="widget-list">
-            <li>When a patient visits, we first take up a detailed medical history as well as their physical parameters (height, weight, body composition analysis). Also their particular schedules, liking, limitations etc are noted.</li>
-            <li>Then, with the patient’s involvement, Aruna & Soumya design a diet plan and a mental health program with minimal changes to their existing habits and eating patterns. Usually the initial plan is for 2 to 3 weeks.</li>
-            <li>In the next visit, all the parameters are measured again, and based on the results, further changes are made to the diet plan. Typically patients meet every week till they reach their goals.</li>
-            <li>On reaching their goals, patients are taught to maintain their health and plan their own diets. This involves explanations regarding how to plan their meals, what and how much to eat, what red flags to avoid etc. Patients are encouraged to keep checking their parameters at least once every 3-4 months.</li>
-        </ul>
+            <li>No medicines prescribed</li>
+            <li>No packaged foods or supplements</li>
+            <li>No hardcore exercise required as part of the diet (although any physical activity can be incorporated if patient prefers it)</li>
+            <li>No fixation with kilos lost, we are aiming for good health and energetic feeling, numbers follow automatically</li>
+            <li>No expensive foreign superfoods, only traditional foods that people are used to</li>
+        </ul>    
     </div>
 </div>
 
