--- a/index.html
+++ b/index.html
@@ -100,17 +100,17 @@
 </div>
 
 
-<div class="brain-to-body-appointment-widget">
+<div class="appointment-widget">
   <!-- Book an Appointment Section -->
-  <div class="brain-to-body-left-widget">
+  <div class="left-widget">
     <h3>Book an Appointment</h3>
-    <button class="brain-to-body-call-now-btn" onclick="window.location.href='tel:+919226307208'">Call Now</button>
+    <button class="call-now-btn" onclick="window.location.href='tel:+919226307208'">Call Now</button>
   </div>
 
   <!-- Can't visit Clinic? Online Consultation Section -->
-  <div class="brain-to-body-right-widget">
+  <div class="right-widget">
     <h3>Can't visit Clinic? Sign up for Online Consultation</h3>
-    <button class="brain-to-body-know-more-btn" onclick="window.open('https://wa.me/+919226307208', '_blank')">Know More</button>
+    <button class="know-more-btn" onclick="window.open('https://wa.me/+919226307208', '_blank')">Know More</button>
   </div>
 </div>
 
