--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <!-- Logo -->
         <a class="navbar-brand" href="#">
             <img class="nav-logo" src="logo.png" alt="Logo">
+            <span class="motto">सर्वे जना: सुखिनो भवन्तु।</span>
+
         </a>
         
         <!-- Toggle button for mobile -->
